# simple-auto-trade

.kiro/hooks/: post-market-auto-research.kiro.hook
.kiro/skills/: post-market-research.md
.kiro/specs/lorentz-scalping-engine/: .config.kiro  requirements.md  tasks.md
.kiro/steering/: architecture.md  trading-context.md  ux-standards.md
backend/: pyproject.toml
backend/memory/insights/: latest.json
